# Change Log
All notable changes to this project will be documented in this file.

## [0.5.0] - 2016-31-05

### Added
- Book: add_or_copy_sheet: replaces add_sheet
		add_empty_sheet
		copy_sheet
### Changed

## [0.4.1] - 2016-05-05

### Added
- Book: option check_compatibility
- Sheet: last_sheet, first_sheet

## [0.4] - 2016-03-16

### Added
- options visible, displayalerts in unobtrusively, for_reading, for_writing

## [0.3.8] - 2016-02-12

### Added
 - mark down comments
 - trace
 - Excel, Book: respond_to?, methods, special_methods, special_methods 

## [0.3.9] - 2016-03-03

### Added
- methods, respond_to?, own_methods in new module General
- yardopts option --legacy for ruby 1.8.6. such that class Book is included in the documentation

## [0.3.8] - 2016-02-12

### Added
 - mark down comments
 - trace
 - Excel, Book: respond_to?, methods, special_methods, special_methods
 
### Changed
  
## [0.3.7] - 2015-12-04

### Added
 - Book::new: includes lifting Win32Ole objects
 - Book: class synonym: Workbook
 - Book::open: can force_excel can contain an win32ole object
 - Book#excel_of
 - Book: consider Excel version for opening linked workbooks
 - Book#close: with keep_open
 - Excel::new: includes lifting Win32ole objects
 - Excel::close_all: with a little time out
 - Excel: sublassing for Books
 
### Changed
 - Excel::close_all: bug fix
 - Excel#recreate: reopening closed workbooks, restrict reopening, visible, displayalerts

 

## [0.3.6] - 2015-10-27

### Added
- Excel#recreate: reopening a closed Excel
- Excel::new(:reuse => <WIN32OLE_excel>): 
  uplifting an Excel represented as object of the class WIN32OLE to an object of the class Excel
- Excel#close, Excel::close_all: with managing unsaved workbooks
- Excel::kill_all
- Excel::excel_processes: yield Excel objects opened with RobustExcelOle
- Book::new: uplifting a WIN32OLE object to a Book object
- Subclassing for Sheet
- Method missing: error messages for dead objects
- trace to stdout or file

### Changed
