@@ -60,7 +60,7 @@ describe Sheet do
   shared_context "sheet 'open book with blank'" do
     before do
       @book_with_blank = Book.open(@blank_file, :read_only => true)
-      @sheet_with_blank = @book_with_blank[0]
+      @sheet_with_blank = @book_with_blank.sheet(1)
     end
 
     after do
@@ -289,7 +289,7 @@ describe Sheet do
       context "read sheet which last cell is merged" do
         before do
           @book_merge_cells = Book.open(@merge_file)
-          @sheet_merge_cell = @book_merge_cells[0]
+          @sheet_merge_cell = @book_merge_cells.sheet(1)
         end
 
         after do
@@ -388,27 +388,27 @@ describe Sheet do
       end
     end
 
-    describe "nvalue" do
+    describe "nameval" do
 
       context "returning the value of a range" do
       
         before do
           @book1 = Book.open(@dir + '/another_workbook.xls')
-          @sheet1 = @book1[0]
+          @sheet1 = @book1.sheet(1)
         end
 
         after do
           @book1.close
         end   
 
-        it "should return value of a range with nvalue and brackets operator" do
-          @sheet1.nvalue("firstcell").should == "foo"
+        it "should return value of a range with nameval and brackets operator" do
+          @sheet1.nameval("firstcell").should == "foo"
           @sheet1["firstcell"].should == "foo"
         end
 
         it "should raise an error if name not defined" do
           expect {
-            value = @sheet1.nvalue("foo")
+            value = @sheet1.nameval("foo")
           }.to raise_error(SheetError, /cannot evaluate name "foo" in sheet/)
           expect {
             @sheet1["foo"]
@@ -416,22 +416,22 @@ describe Sheet do
         end
 
         it "should return default value if name not defined and default value is given" do
-          @sheet1.nvalue("foo", :default => 2).should == 2
+          @sheet1.nameval("foo", :default => 2).should == 2
         end
 
         it "should evaluate a formula" do
-          @sheet1.nvalue("named_formula").should == 4
+          @sheet1.nameval("named_formula").should == 4
         end
       end
     end
 
-    describe "set_nvalue" do
+    describe "set_nameval" do
 
       context "setting the value of a range" do
       
         before do
           @book1 = Book.open(@dir + '/another_workbook.xls', :read_only => true)
-          @sheet1 = @book1[0]
+          @sheet1 = @book1.sheet(1)
         end
 
         after do
@@ -439,31 +439,31 @@ describe Sheet do
         end   
 
         it "should set a range to a value" do
-          @sheet1.nvalue("firstcell").should == "foo"
+          @sheet1.nameval("firstcell").should == "foo"
           @sheet1[1,1].Value.should == "foo"
-          @sheet1.set_nvalue("firstcell","foo")
-          @sheet1.nvalue("firstcell").should == "foo"
+          @sheet1.set_nameval("firstcell","foo")
+          @sheet1.nameval("firstcell").should == "foo"
           @sheet1[1,1].Value.should == "foo"
           @sheet1["firstcell"] = "bar"
-          @sheet1.nvalue("firstcell").should == "bar"
+          @sheet1.nameval("firstcell").should == "bar"
           @sheet1[1,1].Value.should == "bar"
         end
 
         it "should raise an error" do
           expect{
-            @sheet1.nvalue("foo")
+            @sheet1.nameval("foo")
             }.to raise_error(SheetError, /cannot evaluate name "foo" in sheet/)
         end
       end
     end
 
-    describe "set_name" do
+    describe "set_nameval" do
 
       context "setting the name of a range" do
 
          before do
           @book1 = Book.open(@dir + '/another_workbook.xls', :read_only => true, :visible => true)
-          @sheet1 = @book1[0]
+          @sheet1 = @book1.sheet(1)
         end
 
         after do
