@@ -4,16 +4,25 @@ All notable changes to this project will be documented in this file.
 ## [0.5.0] - 2016-31-05
 
 ### Added
-- Book: add_or_copy_sheet: replaces add_sheet
-		add_empty_sheet
+- Book: add_empty_sheet
 		copy_sheet
+		sheet
+		rangeval, set_rangeval
+		nameval, set_nameval
 ### Changed
+- Book: book[<sheet-name<] replaces book.sheet(<sheet_name>)
+        add_or_copy_sheet: replaces add_sheet
+        name_val, set_name_val: replaces n_value, set_n_value
 
 ## [0.4.1] - 2016-05-05
 
 ### Added
 - Book: option check_compatibility
+        sheet
 - Sheet: last_sheet, first_sheet
+
+### Changed
+- Book: #sheet(name) replaces [<name>]
 
 ## [0.4] - 2016-03-16
 
